# FFTW-OpenCV

./: CMakeLists.txt  FFT_CV.cxx
CMake/: CPackConfig.cmake~  FindFFTW.cmake~
